--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebAR and Video Example</title>
+    <title>WebAR Example</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar-nft.min.js"></script>
     <style>
@@ -11,26 +11,17 @@
             margin: 0;
             overflow: hidden;
             display: flex;
-            flex-direction: row;
-            justify-content: space-around;
+            justify-content: center;
             align-items: center;
             height: 100vh;
         }
-        #videoContainer, #arContainer {
-            width: 45%;
+        #arContainer {
+            width: 80%;
             height: 80%;
-            position: relative;
-        }
-        #videoContainer video {
-            width: 100%;
-            height: 100%;
         }
     </style>
 </head>
 <body>
-    <div id="videoContainer">
-        <video id="my-video" src="./videoforar.mp4" controls autoplay muted></video>
-    </div>
     <div id="arContainer">
         <a-scene embedded arjs='sourceType: webcam;'>
             <a-marker type="pattern" url="https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/data/patt.hiro" emitevents="true">
@@ -39,17 +30,16 @@
             <a-entity camera></a-entity>
         </a-scene>
     </div>
+
     <script>
         document.querySelector('a-marker').addEventListener('markerFound', () => {
-            const video = document.getElementById('my-video');
-            video.play();
-        });
-        document.querySelector('a-marker').addEventListener('markerLost', () => {
-            const video = document.getElementById('my-video');
-            video.pause();
+            console.log('Marker found');
         });
 
-        // Debugging: Check if the model is being added to the scene
+        document.querySelector('a-marker').addEventListener('markerLost', () => {
+            console.log('Marker lost');
+        });
+
         document.querySelector('a-marker').addEventListener('model-loaded', () => {
             console.log('3D model loaded successfully.');
         });
