--- a/index.html
+++ b/index.html
@@ -1,52 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebAR Example</title>
+<html>
+  <head>
+    <title>AR.js Example</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar-nft.min.js"></script>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        #arContainer {
-            width: 80%;
-            height: 80%;
-        }
-    </style>
-</head>
-<body>
-    <div id="arContainer">
-        <a-scene embedded arjs='sourceType: webcam;'>
-            <a-marker type="pattern" url="https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/data/patt.hiro" emitevents="true">
-                <a-gltf-model src="./House webAR.glb" scale="0.1 0.1 0.1" position="0 0 -5" rotation="0 0 0"></a-gltf-model>
-            </a-marker>
-            <a-entity camera></a-entity>
-        </a-scene>
-    </div>
+    <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/1.7.2/aframe/build/aframe-ar.js"></script>
+  </head>
+  <body style="margin: 0; overflow: hidden;">
+    <a-scene embedded arjs>
+      <!-- Assets -->
+      <a-assets>
+        <a-asset-item id="3d-model" src="./BoomBox.glb"></a-asset-item>
+        <video id="video" src="./videoforar.mp4" autoplay loop></video>
+      </a-assets>
 
-    <script>
-        document.querySelector('a-marker').addEventListener('markerFound', () => {
-            console.log('Marker found');
-        });
+      <!-- Marker -->
+      <a-marker preset="hiro">
+        <!-- 3D Model -->
+        <a-entity
+          gltf-model="#3d-model"
+          scale="0.5 0.5 0.5"
+          position="-1 0 0"
+        ></a-entity>
 
-        document.querySelector('a-marker').addEventListener('markerLost', () => {
-            console.log('Marker lost');
-        });
+        <!-- Video -->
+        <a-video
+          src="#video"
+          width="1"
+          height="0.5"
+          position="1 0 0"
+        ></a-video>
+      </a-marker>
 
-        document.querySelector('a-marker').addEventListener('model-loaded', () => {
-            console.log('3D model loaded successfully.');
-        });
-
-        document.querySelector('a-marker').addEventListener('model-error', (evt) => {
-            console.error('Error loading 3D model:', evt.detail);
-        });
-    </script>
-</body>
+      <!-- Camera -->
+      <a-entity camera></a-entity>
+    </a-scene>
+  </body>
 </html>
