--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a-scene embedded arjs>
       <a-assets>
         <a-asset-item id="3d-model" src="./House webAR.glb"></a-asset-item>
-        <video id="video" src="./videoforar.mp4" autoplay loop></video>
+        <video id="video" src="./videoforar.mp4" autoplay loop muted></video>
       </a-assets>
       <a-marker preset="hiro">
         <a-entity
@@ -22,7 +22,7 @@
           src="#video"
           width="1.6" 
           height="0.9" 
-          rotation="90 180 0"
+          rotation="90 180 90"
           scale="-1 1 1"
           position="0.5 0 0"
         ></a-video>
