--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a-scene embedded arjs>
       <a-assets>
         <a-asset-item id="3d-model" src="./House webAR.glb"></a-asset-item>
-        <video id="video" src="./videoforar.mp4" autoplay loop muted></video>
+        <video id="video" src="./videoforar.mp4" autoplay loop muted playsinline></video>
       </a-assets>
       <a-marker preset="hiro">
         <a-entity
@@ -23,7 +23,7 @@
           width="1.6" 
           height="0.9" 
           rotation="270 180 90"
-          scale="-1 1 1"
+          scale="1 1 1"
           position="0.5 0 0"
         ></a-video>
       </a-marker>
