--- a/index.html
+++ b/index.html
@@ -4,25 +4,8 @@
     <title>AR.js Example</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/1.7.2/aframe/build/aframe-ar.js"></script>
-    <style>
-        #controls {
-          position: absolute;
-          top: 10px;
-          left: 10px;
-          z-index: 1;
-        }
-        #controls button {
-          font-size: 16px;
-          margin: 5px;
-          padding: 10px;
-        }
-      </style>
-</head>
+  </head>
   <body style="margin: 0; overflow: hidden;">
-    <div id="controls">
-        <button id="playButton">Play</button>
-        <button id="pauseButton">Pause</button>
-      </div>
     <a-scene embedded arjs>
       <a-assets>
         <a-asset-item id="3d-model" src="./House webAR.glb"></a-asset-item>
@@ -33,12 +16,13 @@
           gltf-model="#3d-model"
           scale="5 5 5"
           rotation="270 0 0"
-          position="-0.5 0 0" 
+          position="-0.5 0 0"
         ></a-entity>
         <a-video
+          id="ar-video"
           src="#video"
-          width="1.6" 
-          height="0.9" 
+          width="1.6"
+          height="0.9"
           rotation="-90 0 0"
           scale="1 1 1"
           position="0.5 0 0"
@@ -47,22 +31,24 @@
       <a-entity camera></a-entity>
     </a-scene>
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-          const video = document.querySelector('#video');
-          const playButton = document.getElementById('playButton');
-          const pauseButton = document.getElementById('pauseButton');
-          playButton.addEventListener('click', function() {
-            video.play();
-          });
+      document.addEventListener('DOMContentLoaded', function() {
+        const videoElement = document.querySelector('#video');
+        const arVideoEntity = document.querySelector('#ar-video');
 
-          pauseButton.addEventListener('click', function() {
-            video.pause();
-          });
-          // To ensure the video is loaded and ready to play
-          video.addEventListener('canplay', function() {
-            video.play();
-          });
+        // Ensure the video plays once it can
+        videoElement.addEventListener('canplay', function() {
+          videoElement.play();
         });
-      </script>
+
+        // Toggle play/pause on click
+        arVideoEntity.addEventListener('click', function() {
+          if (videoElement.paused) {
+            videoElement.play();
+          } else {
+            videoElement.pause();
+          }
+        });
+      });
+    </script>
   </body>
 </html>
