--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
         rotation="270 0 0"
         position="-0.5 0 0"
       >
-        <a-box id="collider" position="0 0.5 0" scale="1 1 1" opacity="0"></a-box>
+        <a-box 
+          id="collider" 
+          position="0 0.5 0" 
+          scale="2 2 2" 
+          opacity="0"
+        ></a-box>
       </a-entity>
       <a-video
         id="ar-video"
