--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           id="collider" 
           position="0 0.5 0" 
           scale="2 2 2" 
-          visible="false"
+          visible="true"
         ></a-box>
       </a-entity>
       <a-video
